workloads/domains/image/base/deployment-canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: image-api-canary
  namespace: image
  labels:
    app: image-api
    version: v2
    tier: business-logic
    domain: image
    release: canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: image-api
      version: v2
  template:
    metadata:
      labels:
        app: image-api
        version: v2
        tier: business-logic
        domain: image
        release: canary
    spec:
      containers:
      - name: image-api
        image: docker.io/mng990/eco2:image-api-dev-canary
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
          name: http
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 5
      imagePullSecrets:
      - name: dockerhub-secret
      nodeSelector:
        domain: image
      tolerations:
      - key: domain
        operator: Equal
        value: image
        effect: NoSchedule
