workloads/domains/image/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: image-api
  namespace: image
  labels:
    app: image-api
    tier: business-logic
    domain: image
spec:
  type: NodePort
  selector:
    app: image-api
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
